--- a/Pokemon Wiki/Base.lproj/Main.storyboard
+++ b/Pokemon Wiki/Base.lproj/Main.storyboard
@@ -1,25 +1,109 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="e8E-4S-xws">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Eggs-->
+        <scene sceneID="UFO-oI-KeP">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="qmS-vI-yy7" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="iac-Nm-jPT"/>
+                        <viewControllerLayoutGuide type="bottom" id="uYg-3c-S1R"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="gAf-lP-p04">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Eggs" id="Xt6-i1-3dC"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sbN-4y-4VZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-20" y="1519"/>
+        </scene>
+        <!--Pokemon-->
+        <scene sceneID="WSn-jX-hKt">
+            <objects>
+                <viewController id="42o-CF-cEM" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="ghl-ac-y3C"/>
+                        <viewControllerLayoutGuide type="bottom" id="mof-We-KkS"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="ahX-i7-Nsf">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="AMk-mM-Pn2">
+                                <rect key="frame" x="0.0" y="44" width="600" height="507"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="RDC-8W-G2S">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="RDC-8W-G2S" id="gsT-3e-byy">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="HVr-88-e7f">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <outlet property="delegate" destination="42o-CF-cEM" id="gwP-V2-f9v"/>
+                                </connections>
+                            </searchBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="HVr-88-e7f" firstAttribute="trailing" secondItem="AMk-mM-Pn2" secondAttribute="trailing" id="47R-LQ-Y6g"/>
+                            <constraint firstItem="HVr-88-e7f" firstAttribute="leading" secondItem="AMk-mM-Pn2" secondAttribute="leading" id="HA8-BK-TWk"/>
+                            <constraint firstItem="HVr-88-e7f" firstAttribute="leading" secondItem="ahX-i7-Nsf" secondAttribute="leading" id="Hwe-iU-f2B"/>
+                            <constraint firstItem="AMk-mM-Pn2" firstAttribute="top" secondItem="HVr-88-e7f" secondAttribute="bottom" id="Q6b-L2-eRq"/>
+                            <constraint firstItem="AMk-mM-Pn2" firstAttribute="bottom" secondItem="mof-We-KkS" secondAttribute="top" id="hYm-An-XXi"/>
+                            <constraint firstAttribute="trailing" secondItem="HVr-88-e7f" secondAttribute="trailing" id="niS-G1-C4o"/>
+                            <constraint firstItem="HVr-88-e7f" firstAttribute="top" secondItem="ahX-i7-Nsf" secondAttribute="top" id="vYg-gF-PzU"/>
+                        </constraints>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Pokemon" id="oSu-md-NPV"/>
+                    <connections>
+                        <outlet property="searchDisplayController" destination="4Rw-6u-kSI" id="qSI-4N-Miq"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kzI-no-fAi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <searchDisplayController id="4Rw-6u-kSI">
+                    <connections>
+                        <outlet property="delegate" destination="42o-CF-cEM" id="DNR-yn-Lye"/>
+                        <outlet property="searchBar" destination="HVr-88-e7f" id="MOv-6p-fdK"/>
+                        <outlet property="searchContentsController" destination="42o-CF-cEM" id="KGb-tH-RPL"/>
+                        <outlet property="searchResultsDataSource" destination="42o-CF-cEM" id="mQ7-a4-Dcg"/>
+                        <outlet property="searchResultsDelegate" destination="42o-CF-cEM" id="xr0-Qt-2d5"/>
+                    </connections>
+                </searchDisplayController>
+            </objects>
+            <point key="canvasLocation" x="-20" y="860"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="fxw-3e-xgp">
+            <objects>
+                <tabBarController id="e8E-4S-xws" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="BK7-NL-lP0">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="42o-CF-cEM" kind="relationship" relationship="viewControllers" id="okU-Xj-5d3"/>
+                        <segue destination="qmS-vI-yy7" kind="relationship" relationship="viewControllers" id="bwH-mC-BZI"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DEb-ke-ZFZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-840" y="1191"/>
         </scene>
     </scenes>
 </document>
