--- a/Pokemon Wiki/Base.lproj/Main.storyboard
+++ b/Pokemon Wiki/Base.lproj/Main.storyboard
@@ -37,11 +37,19 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="AMk-mM-Pn2">
-                                <rect key="frame" x="0.0" y="44" width="600" height="507"/>
+                                <rect key="frame" x="0.0" y="20" width="600" height="531"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" id="HVr-88-e7f">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <textInputTraits key="textInputTraits"/>
+                                    <connections>
+                                        <outlet property="delegate" destination="42o-CF-cEM" id="gwP-V2-f9v"/>
+                                    </connections>
+                                </searchBar>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="RDC-8W-G2S">
-                                        <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                        <rect key="frame" x="0.0" y="72" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="RDC-8W-G2S" id="gsT-3e-byy">
                                             <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
@@ -50,23 +58,13 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="HVr-88-e7f">
-                                <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <outlet property="delegate" destination="42o-CF-cEM" id="gwP-V2-f9v"/>
-                                </connections>
-                            </searchBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="HVr-88-e7f" firstAttribute="trailing" secondItem="AMk-mM-Pn2" secondAttribute="trailing" id="47R-LQ-Y6g"/>
-                            <constraint firstItem="HVr-88-e7f" firstAttribute="leading" secondItem="AMk-mM-Pn2" secondAttribute="leading" id="HA8-BK-TWk"/>
-                            <constraint firstItem="HVr-88-e7f" firstAttribute="leading" secondItem="ahX-i7-Nsf" secondAttribute="leading" id="Hwe-iU-f2B"/>
-                            <constraint firstItem="AMk-mM-Pn2" firstAttribute="top" secondItem="HVr-88-e7f" secondAttribute="bottom" id="Q6b-L2-eRq"/>
-                            <constraint firstItem="AMk-mM-Pn2" firstAttribute="bottom" secondItem="mof-We-KkS" secondAttribute="top" id="hYm-An-XXi"/>
-                            <constraint firstAttribute="trailing" secondItem="HVr-88-e7f" secondAttribute="trailing" id="niS-G1-C4o"/>
-                            <constraint firstItem="HVr-88-e7f" firstAttribute="top" secondItem="ahX-i7-Nsf" secondAttribute="top" id="vYg-gF-PzU"/>
+                            <constraint firstAttribute="trailing" secondItem="AMk-mM-Pn2" secondAttribute="trailing" id="Ifm-qk-g2X"/>
+                            <constraint firstItem="AMk-mM-Pn2" firstAttribute="top" secondItem="ghl-ac-y3C" secondAttribute="bottom" id="Ljd-Ax-Zbc"/>
+                            <constraint firstItem="AMk-mM-Pn2" firstAttribute="leading" secondItem="ahX-i7-Nsf" secondAttribute="leading" id="nbM-sF-Yml"/>
+                            <constraint firstItem="AMk-mM-Pn2" firstAttribute="bottom" secondItem="mof-We-KkS" secondAttribute="top" id="x3s-lj-1Td"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Pokemon" id="oSu-md-NPV"/>
@@ -85,7 +83,7 @@
                     </connections>
                 </searchDisplayController>
             </objects>
-            <point key="canvasLocation" x="-20" y="860"/>
+            <point key="canvasLocation" x="-20" y="886"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="fxw-3e-xgp">
